# S2S_omni

./: .dockerignore  .gitignore  README.md  pyproject.toml  requirements-train.txt
configs/: compression_policy.yaml  hibiki_zero_backlog.yaml  qwen3_omni_lora_sft.yaml  tts_backends.yaml
docker/: Dockerfile.softwav  entrypoint.sh
docs/: eval_plan.md  handoff_s2s_omni.md  hibiki_zero_backlog_route.md  remote_artifacts.md
s2s_omni/: __init__.py  audio.py  codec_data.py  floras_live.py  floras_qe.py  hibiki_zero.py  io.py  judge.py  llm_client.py  metrics.py  omni_talker.py  openai_asr.py  prompts.py  rasst.py  schema.py  sft.py  sglang_code2wav_capture.py  speech_signals.py  streaming.py  style.py  textgrid.py  tts.py  wav2codec.py
scripts/: aggregate_floras_qe_scores.py  assemble_policy_sft_dataset.py  audit_omni_codec_pairs.py  audit_talker_label_signals.py  audit_teacher_style.py  audit_tts_duration_samples.py  build_acl6060_enzh_audio_details.py  build_acl6060_full_table.py  build_acl6060_kit_quality_mode_comparison.py  build_acl6060_segale_inputs.py  build_acl6060_xcomet_input.py  build_floras_kit_60s_compare.py  build_floras_kit_full_compare.py  build_floras_qe_inputs.py  build_gigaspeech_audio_chunk_manifest.py  build_gigaspeech_sft.py  build_kit_config_sweep.py  build_kit_floras_result.py  build_omni_codec_pair_manifest.py  build_rasst_softwav_manifest.py  build_softwav_docker_aries.sh  create_kit_session.py  enrich_audio_eval_manifest.py  eval_lora_adapter_generation.py  eval_wav2codec.py  evaluate_floras_live_s2s.py  evaluate_predictions.py  (+83 more)
(+653 files in other folders)
